--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
   </head>
   <body>
     <header>
-        <div id="page-logo">
-<a href="/index.html">Travel Goals</a>
-        </div>
-        
-      <nav></nav>
+      <div id="page-logo">
+        <a href="/index.html">Travel Goals</a>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="/places.html">Destinations</a></li>
+          <li><a href="/info.html">About</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section></section>
