--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="shared.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -24,8 +24,14 @@
       </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
+      <section id="upper">
+        <div calss="1">
+          <h1>Joci's Travel Page</h1>
+      <p>Welcome to my travel goals page!</p>
+      <a href="/places.html">See my travel destinations</a>
+        </div>
+      </section>
+      <section id="lower"></section>
     </main>
   </body>
 </html>
