addrd style the centerbox on main page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </header>
     <main>
       <section id="upper">
-        <div calss="1">
+        <div id="centerbox">
           <h1>Joci's Travel Page</h1>
-      <p>Welcome to my travel goals page!</p>
-      <a href="/places.html">See my travel destinations</a>
+          <p>Welcome to my travel goals page!</p>
+          <a href="/places.html">See my travel destinations</a>
         </div>
       </section>
       <section id="lower"></section>
