--- a/index.html
+++ b/index.html
@@ -31,7 +31,23 @@
           <a href="/places.html">See my travel destinations</a>
         </div>
       </section>
-      <section id="lower"></section>
+      <section id="lower">
+      <h2>Highlights</h2>
+      <ul id="destinations">
+        <li class="destination">
+          <img src="/places/greek.jpg" alt="Greek" />
+          <p>Going to <b>Greek</b></p>
+        </li>
+        <li class="destination">
+          <img src="/places/italy.jpg" alt="Italy" />
+          <p>Going to <b>Italy</b></p>
+        </li>
+        <li class="destination">
+          <img src="/places/finland.jpg" alt="Finland" />
+          <p>Going to <b>Finland</b></p>
+        </li>
+      </ul>
+    </section>
     </main>
   </body>
 </html>
