added footer and style for it

--- a/index.html
+++ b/index.html
@@ -31,22 +31,36 @@
         </div>
       </section>
       <section id="lower">
-      <h2>Highlights</h2>
-      <ul id="destinations">
-        <li class="destination">
-          <img src="/places/greek.jpg" alt="Greek" />
-          <p>Going to <b>Greek</b></p>
+        <h2>Highlights</h2>
+        <ul id="destinations">
+          <li class="destination">
+            <img src="/places/greek.jpg" alt="Greek" />
+            <p>Going to <b>Greek</b></p>
+          </li>
+          <li class="destination">
+            <img src="/places/italy.jpg" alt="Italy" />
+            <p>Going to <b>Italy</b></p>
+          </li>
+          <li class="destination">
+            <img src="/places/finland.jpg" alt="Finland" />
+            <p>Going to <b>Finland</b></p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li>
+          <a href="http://www.facebook.com"
+            ><img src="/images/facebook.png" alt="facebook logo"
+          /></a>
         </li>
-        <li class="destination">
-          <img src="/places/italy.jpg" alt="Italy" />
-          <p>Going to <b>Italy</b></p>
-        </li>
-        <li class="destination">
-          <img src="/places/finland.jpg" alt="Finland" />
-          <p>Going to <b>Finland</b></p>
+        <li>
+          <a href="http://www.instagram.com"
+            ><img src="/images/insta.png" alt="instagram logo"
+          /></a>
         </li>
       </ul>
-    </section>
-    </main>
+    </footer>
   </body>
 </html>
