--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <ul id="destinations">
           <li class="destination">
             <img src="/places/greek.jpg" alt="Greek" />
-            <p>Going to <b>Greek</b></p>
+            <p>Athen-<b>Greek</b></p>
           </li>
           <li class="destination">
             <img src="/places/italy.jpg" alt="Italy" />
-            <p>Going to <b>Italy</b></p>
+            <p>Venezia-<b>Italy</b></p>
           </li>
           <li class="destination">
             <img src="/places/finland.jpg" alt="Finland" />
-            <p>Going to <b>Finland</b></p>
+            <p>Rovaniemi-<b>Finland</b></p>
           </li>
         </ul>
       </section>
