--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </li>
           <li class="destination">
             <img src="/places/italy.jpg" alt="Italy" />
-            <p>Venezia-<b>Italy</b></p>
+            <p>Venice-<b>Italy</b></p>
           </li>
           <li class="destination">
             <img src="/places/finland.jpg" alt="Finland" />
