--- a/places.html
+++ b/places.html
@@ -22,7 +22,51 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <ul>
+        <li>
+          <img src="/places/greek.jpg" alt="Athen acropolis" />
+          <div class="content">
+            <h2>Athen</h2>
+            <p>
+              Athens is the capital of Greece, a vast, cosmopolitan metropolis
+              home to more than 3 million people. Ancient Athens was a powerful
+              city-state and a significant center of science. The city is
+              located on the Attica peninsula and is far from Hungary; by car,
+              it’s about a 15–20 hour journey.
+            </p>
+          </div>
+          <div class="content">
+            <a href="https://en.wikipedia.org/wiki/Acropolis_of_Athens"
+              >More info</a
+            >
+          </div>
+        </li>
+        <li>
+          <img src="/places/italy.jpg" alt="city of Venice" />
+          <div>
+            <h2>Venice</h2>
+            <p>
+              Venice, a city built on a network of shimmering canals and marble
+              streets, is a timeless tapestry of art, history, and romance. With
+              its iconic gondolas gliding through narrow waterways and grand
+              palazzos lining the Grand Canal, it feels like a living museum.
+              From the bustling Rialto Market to the tranquil beauty of St.
+              Mark's Square, Venice invites wandering souls to explore hidden
+              courtyards and intimate alleys. The city’s world-class museums and
+              celebrated architecture showcase centuries of creativity and
+              innovation. A stroll through its winding lanes leaves you with a
+              sense of wonder at this remarkable floating metropolis.
+            </p>
+          </div>
+          <div>
+            <a href="https://en.wikipedia.org/wiki/Venice"
+              >More info</a
+            >
+          </div>
+        </li>
+      </ul>
+    </main>
     <footer>
       <ul>
         <li>
